--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^13.7.0",
     "eslint": "^8.16.0",
+    "js-yaml": "^4.1.0",
+    "sequelize": "^6.20.1",
     "typescript": "^4.7.2"
   },
   "devDependencies": {
