--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "invitation-dcbot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "An invitation discord bot ",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --project tsconfig.json"
+    "build": "tsc --project ./tsconfig.json"
   },
   "keywords": [],
-  "author": "",
+  "author": "Yusta",
   "license": "ISC",
   "dependencies": {
+    "@types/js-yaml": "^4.0.5",
     "discord.js": "^13.7.0",
     "eslint": "^8.16.0",
     "js-yaml": "^4.1.0",
@@ -23,5 +24,6 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "prettier": "^2.6.2"
-  }
+  },
+  "type": "module"
 }
