--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
-    "prettier": "^2.6.2"
+    "husky": "^8.0.1"
   },
   "type": "module"
 }
