--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1"
+    "@typescript-eslint/parser": "^5.27.0"
   },
   "type": "module"
 }
