--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --project ./tsconfig.json"
+    "build": "babel --extensions .ts --config-file ./babel.config.json --out-dir dist src"
   },
   "keywords": [],
   "author": "Yusta",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.13.0",
     "@types/js-yaml": "^4.0.5",
     "discord.js": "^13.7.0",
     "eslint": "^8.16.0",
     "js-yaml": "^4.1.0",
+    "node-fetch": "^3.2.5",
     "sequelize": "^6.20.1",
     "typescript": "^4.7.2"
   },
