--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
       "allowJs": true,
-      "module": "ESNext",
+      "module": "ES2015",
       "strict": true,
       "strictBindCallApply": true,
       "strictFunctionTypes": true,
