--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel --extensions .ts --config-file ./babel.config.json --out-dir dist src"
+    "build": "tsc --project ./tsconfig.json"
   },
   "keywords": [],
   "author": "Yusta",
