--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.7.0",
     "eslint": "^8.16.0",
     "js-yaml": "^4.1.0",
+    "mysql2": "^2.3.3",
     "node-fetch": "^3.2.5",
     "sequelize": "^6.20.1",
     "typescript": "^4.7.2"
